--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://drive.google.com/file/d/1vKv5lOeMgkcSnWKXlMuSPwfZaNYq-JJA/view?usp=sharing'"
+                onclick="window.open('https://drive.google.com/file/d/1vKv5lOeMgkcSnWKXlMuSPwfZaNYq-JJA/view?usp=sharing')"
+
               >
                 Download (Google Drive)
               </button>
@@ -361,7 +362,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://drive.google.com/file/d/1T6plyfbdcVoJ9gIxxCzTJUYkOnocPUEx/view?usp=sharing'"
+                onclick="window.open('https://drive.google.com/file/d/1T6plyfbdcVoJ9gIxxCzTJUYkOnocPUEx/view?usp=sharing')"
               >
               Download (Google Drive)
               </button>
