--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Excel</h3>
+                  <h3>MATLAB</h3>
                   <p id="white-out">Experienced</p>
                 </div>
               </article>
