--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Tablaeu</h3>
+                  <h3>Tableau</h3>
                   <p id="white-out">Experienced</p>
                 </div>
               </article>
