--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>James Imbuido</title>
+    <title>Josh Loh</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">James Imbuido</div>
+      <div class="logo">Josh Loh</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">James Imbuido</div>
+      <div class="logo">Josh Loh</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -38,16 +38,16 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.jfif" alt="James Imbuido's profile picture" />
+        <img src="./assets/profile-pic.jfif" alt="Josh Loh's profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">James Imbuido</h1>
-        <p class="section__text__p2"> Aspiring Data Scientist</p>
+        <h1 class="title">Josh Loh</h1>
+        <p class="section__text__p2"> Aspiring Data Analyst</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/James Imbuido - CV.pdf')"
+            onclick="window.open('./assets/Josh Loh - CV.pdf')"
           >
             Download CV
           </button>
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/in/jamesimbuido/'"
+            onclick="location.href='https://www.linkedin.com/in/joshloh2/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/jimbuido08'"
+            onclick="location.href='https://github.com/joshlohx'"
           />
         </div>
       </div>
@@ -100,11 +100,11 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BSc of Nursing<br />MSc in Data Science</p>
+              <p>BSc of Commerce<br />Majoring in Business Analytics & Finance</p>
             </div>
           </div>
           <div class="text-container">
-            <p> Combining my nursing expertise with data science skills, I tackle problems with a data-driven approach, optimizing efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.
+            <p> Combining my consulting expertise with data analytics skills, I tackle problems with a data-driven approach, optimizing efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.
             </p>
           </div>
         </div>
@@ -285,13 +285,13 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">[Python] Machine Learning with Passwords</h2>
+            <h2 class="experience-sub-title project-title">[PowerBI] Global Electronic Retailer Dashboard</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://www.kaggle.com/jamesimbuido/james-imbuido-password-creator-and-evaluator')"
+                onclick="window.open('https://drive.google.com/file/d/1Z_JvBPPJsO6lP46Y2eOog8gGggw7I13x/view?usp=drive_link')"
               >
-                Kaggle
+                Download (Google Drive)
               </button>
               <button
                 class="btn btn-color-2 project-btn"
@@ -309,13 +309,13 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">[R] Bank Customer Churn Prediction</h2>
+            <h2 class="experience-sub-title project-title">[SQL] 8-Week SQL Case Study</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://www.kaggle.com/code/jamesimbuido/notebook1f5c850e25', '_blank')"
+                onclick="window.open('https://github.com/joshlohx/8-Week-SQL-Challenge/blob/main/README.md')"
                 >
-                Kaggle
+                Git Repo
               </button>
               <button
                 class="btn btn-color-2 project-btn"
@@ -333,49 +333,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">[TABLEAU] Covid Screener Dashboard</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://drive.google.com/file/d/1vKv5lOeMgkcSnWKXlMuSPwfZaNYq-JJA/view?usp=sharing')"
 
-              >
-                Download (Google Drive)
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Information Sheet - Tableau CoVid Dashboard.pdf')"
-              >
-              Information (PDF)
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-4.png"
-                alt="Project 4"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">[PowerBI] Spotify Dashboard</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://drive.google.com/file/d/1T6plyfbdcVoJ9gIxxCzTJUYkOnocPUEx/view?usp=sharing')"
-              >
-              Download (Google Drive)
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Information Sheet - PowerBI Spotify Dashboard.pdf')"
-              >
-              Information (PDF)
-              </button>
-            </div>
-          </div>
-
-          
         </div>
       </div>
       <img
@@ -395,7 +353,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:jtb9029@protonmail.com">jtb9029@protonmail.com</a></p>
+          <p><a href="mailto:jloh5656@gmail.com">jloh5656@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -403,7 +361,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/jamesimbuido/" target="_blank">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/joshloh2/" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
@@ -418,7 +376,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 James Imbuido. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Josh Loh. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
