--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BSc of Commerce<br />Majoring in Business Analytics & Finance</p>
+              <p>BSc of Commerce<br />Major in Business Analytics & Finance</p>
             </div>
           </div>
           <div class="text-container">
-            <p> Combining my consulting expertise with data analytics skills, I tackle problems with a data-driven approach, optimizing efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.
+            <p> Combining my consulting experience with data analytics skills, I tackle problems with a data-driven approach, optimizing efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.
             </p>
           </div>
         </div>
@@ -131,40 +131,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
                   <h3>Python</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JavaScript</h3>
                   <p id="white-out">Experienced</p>
                 </div>
               </article>
@@ -202,51 +169,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>MATLAB</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Hadoop</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PySpark</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
                   <h3>Tableau</h3>
-                  <p id="white-out">Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SAS</h3>
                   <p id="white-out">Experienced</p>
                 </div>
               </article>
