--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="text-container">
-            <p> Combining my consulting experience with data analytics skills, I tackle problems with a data-driven approach, optimizing efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.<br /><br />In my spare time, I love playing tennis, electric guitar, video games and travelling!
+            <p> Combining my consulting experience with data analytics skills, I tackle problems with a data-driven approach, optimising efficiency and impact. As a highly motivated team player with a strong work ethic, I consistently deliver results, always willing to go the extra mile.<br /><br />In my spare time, I love playing tennis, electric guitar, video games and travelling!
             </p>
           </div>
         </div>
