--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('./assets/Information Sheet - Global Electronic Retailer Dashboard.pdf')"
+                onclick="window.open('./assets/Information Sheet - Global Electronics Retailer Dashboard.pdf')"
               >
                 Information (PDF)
               </button>
