--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
