--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Josh Loh</h1>
-        <p class="section__text__p2"> Aspiring Data Analyst</p>
+        <p class="section__text__p2"> Data Professional</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
