--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/Josh Loh - CV.pdf')"
           >
-            Download CV
+            Resume
           </button>
           <button class="btn btn-color-2" onclick="location.href='#contact'">
             Contact Info
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Other Technologies</h2>
+            <h2 class="experience-sub-title">Visualisation Tools</h2>
             <div class="article-container">
               <article>
                 <img
