--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Visualisation Tools</h2>
+            <h2 class="experience-sub-title">Other Technologies</h2>
             <div class="article-container">
               <article>
                 <img
@@ -181,6 +181,17 @@
                 />
                 <div>
                   <h3>PowerBI</h3>
+                  <p id="white-out">Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>CloverDX</h3>
                   <p id="white-out">Experienced</p>
                 </div>
               </article>
